--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -196,7 +196,7 @@
                 <div class="w3-center">${message}</div>
               </div>
               <div style="display:flex; justify-content:space-around;">
-                <button onclick="this.parentElement.parentElement.style.display='none'; hide_message(${message_id}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">{{text["accept"][player.lang_id]}}</i></button>
+                <button onclick="this.parentElement.parentElement.style.display='none'; hide_message(${message_id}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">{{text["accept"][player.lang_id]}}</button>
                 <button onclick="this.parentElement.parentElement.style.display='none'; hide_message(${message_id}); answer_flouze_request(false);" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">{{text["decline"][player.lang_id]}}</button>
               </div>
             </div>
